Added most of the necessary information

--- a/index.html
+++ b/index.html
@@ -1,11 +1,45 @@
 <html>
-  <head>
-    <title?Group 007</title>
-  </head>
-  <body>
-    <h1>Group 007</h1>
-    <div>
-    
-    </div>
-  </body>
+
+<head>
+  <title>Group 007</title>
+  <link rel="stylesheet" type="text/css" href="./Styling/homepage.css">
+
+</head>
+
+<body>
+  <h1 id="pageTitle">Simply Scansion</h1>
+  <h3 id="pageSubtitle">Group 007 - CS495 - Spring 2021</h3>
+
+  <div id="attentionText">
+    The goals of our project are to develop a fully functional web application that gameifies the practice of poetry
+    scansion.<br>
+    We want to deliver a fluid, seamless experience for students to study and for professors to monitor student
+    progress. The mobile experience
+    is our top priority, though we will need for the site to work well on laptops as well. The top priority is to make
+    practicing scansion fun
+    and simple.
+  </div>
+
+  <div class="left halfCell listingText">
+    Tools / APIs / Frameworks
+    <ul>
+      <li>React.JS Frontend</li>
+      <li>Node.JS + Express.JS Backend</li>
+    </ul>
+  </div>
+  <div class="right halfCell listingText">
+    Team members
+    <ul>
+      <li>Madison Macaulay</li>
+      <li>Connor Meadows</li>
+      <li>Lyle (Nash) Stokes</li>
+      <li>Jeremy Tucker</li>
+    </ul>
+  </div>
+
+  <div class="wideDiv eyecatching">
+    Under Construction
+  </div>
+</body>
+
 </html>
