Added user experiences
Added user and administrator features that we are planning to incorporate

--- a/index.html
+++ b/index.html
@@ -38,7 +38,20 @@
   </div>
 
   <div class="wideDiv eyecatching">
-    Under Construction
+    User Experiences
+    <ul>
+      <li>Users can login to a personal account</li>
+      <li>Users can select Shakespearean Sonnets</li>
+      <li>Users can use color coding options to assign to sonnet blocks</li>
+      <li>Users can track their progress</li>
+      <li>Users can receive instructor feedback</li>
+    </ul>
+    Administrator Experiences
+    <ul>
+      <li>Admins can import new sonnets</li>
+      <li>Admins can assign sonnets to students</li>
+      <li>Admins can monitor individual and class-wide progress</li>
+    </ul>
   </div>
 </body>
 
