Added whitespace to bottom and changed widediv font color

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <li>Admins can monitor individual and class-wide progress</li>
     </ul>
   </div>
+  <div id="whitespace"></div>
 </body>
 
 </html>
