Added navbar and sprint one update

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 
 <body>
+  <div id="navbar">
+    <div class="navbarRow">
+      <div class="navbarCell"><a target="_blank" href="https://github.com/CS495-Group007/PoetryCode"><div class="linkCircle">Github Repo</div></a></div>
+      <div class="navbarCell"><a href="" target="_blank"><div class="linkCircle">Simply Scansion</div></a></div>
+    </div>
+  </div>
+
   <h1 id="pageTitle">Simply Scansion</h1>
   <h3 id="pageSubtitle">Group 007 - CS495 - Spring 2021</h3>
 
@@ -25,6 +32,8 @@
     <ul>
       <li>React.JS Frontend</li>
       <li>Node.JS + Express.JS Backend</li>
+      <li>GCP Hosting</li>
+      <li>[TBI] Firestore NoSql Storage</li>
     </ul>
   </div>
   <div class="right halfCell listingText">
@@ -37,22 +46,44 @@
     </ul>
   </div>
 
-  <div class="wideDiv eyecatching">
-    User Experiences
+  <div class="wideDiv eyecatching" id="Experiences">
+    Student Experiences
     <ul>
-      <li>Users can login to a personal account</li>
-      <li>Users can select Shakespearean Sonnets</li>
-      <li>Users can use color coding options to assign to sonnet blocks</li>
-      <li>Users can track their progress</li>
-      <li>Users can receive instructor feedback</li>
+      <li>Students can login to a personal account</li>
+      <li>Students can select Shakespearean Sonnets</li>
+      <li>Students can use color coding options to assign to sonnet blocks</li>
+      <li>Students can track their progress</li>
+      <li>Students can receive instructor feedback</li>
     </ul>
-    Administrator Experiences
+    Instructor Experiences
     <ul>
-      <li>Admins can import new sonnets</li>
-      <li>Admins can assign sonnets to students</li>
-      <li>Admins can monitor individual and class-wide progress</li>
+      <li>Instructors can import new sonnets</li>
+      <li>Instructors can assign sonnets to students</li>
+      <li>Instructors can monitor individual and class-wide progress</li>
     </ul>
   </div>
+
+  <div class="wideDiv commonColoring" id="SprintOne">
+    Sprint One
+    <ul>
+      <li>Produced a navigable site</li>
+      <li>Welcome Page</li>
+      <li>Login Page</li>
+      <li>Create Account Page</li>
+      <li>Add a Poem Page</li>
+      <li>Gameplay Page</li>
+      <li>Drag and drop functionality</li>
+      <li>Strong initial styling</li>
+      <li>Students can track their progress</li>
+    </ul>
+    Sprint Two Goals
+    <ul>
+      <li>Organize the code</li>
+      <li>Implement the database</li>
+      <li>Arrive at a usable product</li>
+    </ul>
+  </div>
+
   <div id="whitespace"></div>
 </body>
 
