Added the link to the app

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <div id="navbar">
     <div class="navbarRow">
       <div class="navbarCell"><a target="_blank" href="https://github.com/CS495-Group007/PoetryCode"><div class="linkCircle">Github Repo</div></a></div>
-      <div class="navbarCell"><a href="" target="_blank"><div class="linkCircle">Simply Scansion</div></a></div>
+      <div class="navbarCell"><a href="https://commanding-iris-305103.uc.r.appspot.com/" target="_blank"><div class="linkCircle">Simply Scansion</div></a></div>
     </div>
   </div>
 
