--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
     Tools / APIs / Frameworks
     <ul>
       <li>React.JS Frontend</li>
-      <li>Node.JS + Express.JS Backend</li>
-      <li>GCP Hosting</li>
-      <li>[TBI] Firestore NoSql Storage</li>
+      <li>PhP + Laravel Backend</li>
+      <li>eTech Campus Hosting</li>
+      <li>MySQL DB</li>
     </ul>
   </div>
   <div class="right halfCell listingText">
@@ -81,6 +81,28 @@
       <li>Organize the code</li>
       <li>Implement the database</li>
       <li>Arrive at a usable product</li>
+    </ul>
+  </div>
+
+  <div class="wideDiv commonColoring" id="SprintTwo">
+    Sprint Two
+    <ul>
+      <li>Added more pages</li>
+      <li>Improved Welcome Page</li>
+      <li>Howto Page</li>
+      <li>Create Account Page</li>
+      <li>Greatly Improved Add a Poem Page</li>
+      <li>Greatly Improved Gameplay Page</li>
+      <li>Greatly Improved Drag and drop functionality</li>
+      <li>Added ability to delete blocks</li>
+      <li>Student Dashboard</li>
+      <li>Instructor Dashboard</li>
+      <li>Found the new backend solution</li>
+    </ul>
+    Sprint Three Goals
+    <ul>
+      <li>Implement the database and backend</li>
+      <li>Refine the usability of our product</li>
     </ul>
   </div>
 
