Reflecting changed name

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <div id="navbar">
     <div class="navbarRow">
       <div class="navbarCell"><a target="_blank" href="https://github.com/CS495-Group007/PoetryCode"><div class="linkCircle">Github Repo</div></a></div>
-      <div class="navbarCell"><a href="https://commanding-iris-305103.uc.r.appspot.com/" target="_blank"><div class="linkCircle">Simply Scansion</div></a></div>
+      <div class="navbarCell"><a href="https://syllabits.betatesting.as.ua.edu/" target="_blank"><div class="linkCircle">Syllabits (Backend Incomplete)</div></a></div>
     </div>
   </div>
 
-  <h1 id="pageTitle">Simply Scansion</h1>
+  <h1 id="pageTitle">Syllabits</h1>
   <h3 id="pageSubtitle">Group 007 - CS495 - Spring 2021</h3>
 
   <div id="attentionText">
