--- a/index.html
+++ b/index.html
@@ -1,112 +1,202 @@
 <html>
+  <head>
+    <title>Group 007</title>
+    <link rel="stylesheet" type="text/css" href="./Styling/homepage.css" />
+  </head>
 
-<head>
-  <title>Group 007</title>
-  <link rel="stylesheet" type="text/css" href="./Styling/homepage.css">
-
-</head>
-
-<body>
-  <div id="navbar">
-    <div class="navbarRow">
-      <div class="navbarCell"><a target="_blank" href="https://github.com/CS495-Group007/PoetryCode"><div class="linkCircle">Github Repo</div></a></div>
-      <div class="navbarCell"><a href="https://syllabits.betatesting.as.ua.edu/" target="_blank"><div class="linkCircle">Syllabits (Backend Incomplete)</div></a></div>
+  <body>
+    <div id="navbar">
+      <div class="navbarRow">
+        <div class="navbarCell">
+          <a target="_blank" href="https://github.com/CS495-Group007/PoetryCode"
+            ><div class="linkCircle">Github Repo</div></a
+          >
+        </div>
+        <div class="navbarCell">
+          <a href="https://syllabits.betatesting.as.ua.edu/" target="_blank"
+            ><div class="linkCircle">Syllabits (Backend Incomplete)</div></a
+          >
+        </div>
+      </div>
     </div>
-  </div>
 
-  <h1 id="pageTitle">Syllabits</h1>
-  <h3 id="pageSubtitle">Group 007 - CS495 - Spring 2021</h3>
+    <h1 id="pageTitle">Syllabits</h1>
+    <h3 id="pageSubtitle">Group 007 - CS495 - Spring 2021</h3>
 
-  <div id="attentionText">
-    The goals of our project are to develop a fully functional web application that gameifies the practice of poetry
-    scansion.<br>
-    We want to deliver a fluid, seamless experience for students to study and for professors to monitor student
-    progress. The mobile experience
-    is our top priority, though we will need for the site to work well on laptops as well. The top priority is to make
-    practicing scansion fun
-    and simple.
-  </div>
+    <div id="attentionText">
+      The goals of our project were to develop a fully functional web
+      application that gameifies the practice of poetry scansion.<br />
+      We placed heavy emphasis on delivering a fluid, seamless experience for
+      guests, students, and instructors. Though various roadblocks ultimately
+      kept us from completing the project's backend, we're proud of the progress
+      we got to make.
+    </div>
 
-  <div class="left halfCell listingText">
-    Tools / APIs / Frameworks
-    <ul>
-      <li>React.JS Frontend</li>
-      <li>PhP + Laravel Backend</li>
-      <li>eTech Campus Hosting</li>
-      <li>MySQL DB</li>
-    </ul>
-  </div>
-  <div class="right halfCell listingText">
-    Team members
-    <ul>
-      <li>Madison Macaulay</li>
-      <li>Connor Meadows</li>
-      <li>Lyle (Nash) Stokes</li>
-      <li>Jeremy Tucker</li>
-    </ul>
-  </div>
+    <div id="layoutTable">
 
-  <div class="wideDiv eyecatching" id="Experiences">
-    Student Experiences
-    <ul>
-      <li>Students can login to a personal account</li>
-      <li>Students can select Shakespearean Sonnets</li>
-      <li>Students can use color coding options to assign to sonnet blocks</li>
-      <li>Students can track their progress</li>
-      <li>Students can receive instructor feedback</li>
-    </ul>
-    Instructor Experiences
-    <ul>
-      <li>Instructors can import new sonnets</li>
-      <li>Instructors can assign sonnets to students</li>
-      <li>Instructors can monitor individual and class-wide progress</li>
-    </ul>
-  </div>
+      <div class="layoutTableRow">
+        <div class="layoutTableCell">
+          <div class="generalTable">
+            <div class="generalTableRow">
+              <div class="generalTableCell">
+                <span class="littleHeading">Tools / APIs / Frameworks</span>
+                <ul>
+                  <li>React.JS Frontend</li>
+                  <li>PhP + Laravel Backend</li>
+                  <li>eTech Campus Hosting</li>
+                  <li>MySQL DB</li>
+                </ul>
+              </div>
+              <div class="generalTableCell">
+                <span class="littleHeading">Team members</span>
+                <ul>
+                  <li>Madison Macaulay</li>
+                  <li>Connor Meadows</li>
+                  <li>Nash (Lyle) Stokes</li>
+                  <li>Jeremy Tucker</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
-  <div class="wideDiv commonColoring" id="SprintOne">
-    Sprint One
-    <ul>
-      <li>Produced a navigable site</li>
-      <li>Welcome Page</li>
-      <li>Login Page</li>
-      <li>Create Account Page</li>
-      <li>Add a Poem Page</li>
-      <li>Gameplay Page</li>
-      <li>Drag and drop functionality</li>
-      <li>Strong initial styling</li>
-      <li>Students can track their progress</li>
-    </ul>
-    Sprint Two Goals
-    <ul>
-      <li>Organize the code</li>
-      <li>Implement the database</li>
-      <li>Arrive at a usable product</li>
-    </ul>
-  </div>
+      <div class="layoutTableRow">
+        <div class="layoutTableCell wideCellPadding">
+          <div class="eyecatching">
+            <span class="littleHeading">Student Experiences</span>
+            <ul>
+              <li>Students can login to a personal account</li>
+              <li>Guests can play the games without signing in</li>
+              <li>Students / Guests can select Poems</li>
+              <li>
+                Students can use color coding options to assign to sonnet blocks
+              </li>
+              <li>Students can track their progress</li>
+            </ul>
+            <span class="littleHeading">Instructor Experiences</span>
+            <ul>
+              <li>Instructors can add new sonnets with their solutions</li>
+              <li>
+                Instructors can monitor individual and class-wide progress
+              </li>
+              <li>Instructors can view progresses with multiple views</li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
-  <div class="wideDiv commonColoring" id="SprintTwo">
-    Sprint Two
-    <ul>
-      <li>Added more pages</li>
-      <li>Improved Welcome Page</li>
-      <li>Howto Page</li>
-      <li>Create Account Page</li>
-      <li>Greatly Improved Add a Poem Page</li>
-      <li>Greatly Improved Gameplay Page</li>
-      <li>Greatly Improved Drag and drop functionality</li>
-      <li>Added ability to delete blocks</li>
-      <li>Student Dashboard</li>
-      <li>Instructor Dashboard</li>
-      <li>Found the new backend solution</li>
-    </ul>
-    Sprint Three Goals
-    <ul>
-      <li>Implement the database and backend</li>
-      <li>Refine the usability of our product</li>
-    </ul>
-  </div>
+      <div class="layoutTableRow">
+        <div class="layoutTableCell wideCellPadding">
+          <button class="sprintButton">Sprint 1</button>
+          <div class="sprintContent">
+            <ul>
+              <li>Produced a navigable site</li>
+              <li>Welcome Page</li>
+              <li>Login Page</li>
+              <li>Create Account Page</li>
+              <li>Add a Poem Page</li>
+              <li>Gameplay Page</li>
+              <li>Drag and drop functionality</li>
+              <li>Strong initial styling</li>
+              <li>Students can track their progress</li>
+            </ul>
+            </ul>
+            Sprint Two Goals
+            <ul>
+              <li>Organize the code</li>
+              <li>Implement the database</li>
+              <li>Arrive at a usable product</li>
+            </ul>
+          </div>
 
-  <div id="whitespace"></div>
-</body>
+          <button class="sprintButton">Sprint 2</button>
+          <div class="sprintContent">
+            <ul>
+              <li>Added more pages</li>
+              <li>Improved Welcome Page</li>
+              <li>Howto Page</li>
+              <li>Create Account Page</li>
+              <li>Greatly Improved Add a Poem Page</li>
+              <li>Greatly Improved Gameplay Page</li>
+              <li>Greatly Improved Drag and drop functionality</li>
+              <li>Added ability to delete blocks</li>
+              <li>Student Dashboard</li>
+              <li>Instructor Dashboard</li>
+              <li>Found the new backend solution</li>
+            </ul>
+            Test Cases 
+            <ul>
+              <li>The user should be able to click the boxes on the instructor dashboard to view student statuses on each poem</li>
+              <li>The user should be able to click a poem on the poem dashboard to link to the corresponding gameboard page</li>
+              <li>The user should be able to navigate the site with the navbar</li>
+              <li>The user should be able to check their work against the answer key.</li>
+              <li>After a user logs in, they should be taken to their student dashboard</li>
+            </ul>
+            Sprint Three Goals
+            <ul>
+              <li>Implement the database and backend</li>
+              <li>Refine the usability of our product</li>
+            </ul>
+          </div>
 
+          <button class="sprintButton">Sprint 3</button>
+          <div class="sprintContent">
+            <ul>
+              <li>Stylized login and add poem pages</li>
+              <li>Added views to the instructor dashboard</li>
+              <li>Figured out backend solution</li>
+              <li>Added static pages like credits</li>
+              <li>Detailed handoff information in the Github Readme</li>
+            </ul>
+            Test Cases 
+            <ul>
+              <li>
+                The interface should be easily navigable by a new user.
+              </li>
+              <li>
+                Should be able to click the button at the top of the instructor dashboard to see an alternate view.
+              </li>
+              <li>
+                A link on the student dashboard should take users to a poem to be scanned
+              </li>
+              <li>
+                The login form should take the user to their dashboard on submission.
+              </li>
+              <li>
+                The register form should require all fields except for the instructor email.
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <div class="layoutTableRow">
+        <div class="layoutTableCell wideCellPadding">
+          <video id="processVideo" controls>
+            <!-- <source src=”https://drive.google.com/file/d/1vF7C1ZjbUd8KNMDUHan9YZMVy4rbcmnQ/view?usp=sharing” type=video/mp4> -->
+            <source src="Group007FinalVideo.mp4" type=video/mp4>
+          </video>
+        </div>
+      </div>
+
+    </div>
+
+    <script>
+      var coll = document.getElementsByClassName("sprintButton");
+      var i;
+
+      for (i = 0; i < coll.length; i++) {
+        coll[i].addEventListener("click", function () {
+          this.classList.toggle("active");
+          var content = this.nextElementSibling;
+          if (content.style.maxHeight) {
+            content.style.maxHeight = null;
+          } else {
+            content.style.maxHeight = content.scrollHeight + "px";
+          }
+        });
+      }
+    </script>
+  </body>
 </html>
