--- a/index.html
+++ b/index.html
@@ -172,11 +172,12 @@
       </div>
 
       <div class="layoutTableRow">
-        <div class="layoutTableCell wideCellPadding">
-          <video id="processVideo" controls>
-            <!-- <source src=”https://drive.google.com/file/d/1vF7C1ZjbUd8KNMDUHan9YZMVy4rbcmnQ/view?usp=sharing” type=video/mp4> -->
+        <div class="layoutTableCell wideCellPadding centerIt">
+          <!-- <video id="processVideo" controls>
+            <source src=”https://drive.google.com/file/d/1vF7C1ZjbUd8KNMDUHan9YZMVy4rbcmnQ/view?usp=sharing” type=video/mp4>
             <source src="Group007FinalVideo.mp4" type=video/mp4>
-          </video>
+          </video> -->
+          <iframe src="https://drive.google.com/file/d/1vF7C1ZjbUd8KNMDUHan9YZMVy4rbcmnQ/preview" id="processVideo"></iframe>
         </div>
       </div>
 
