Added video link just in case

--- a/index.html
+++ b/index.html
@@ -173,10 +173,7 @@
 
       <div class="layoutTableRow">
         <div class="layoutTableCell wideCellPadding centerIt">
-          <!-- <video id="processVideo" controls>
-            <source src=”https://drive.google.com/file/d/1vF7C1ZjbUd8KNMDUHan9YZMVy4rbcmnQ/view?usp=sharing” type=video/mp4>
-            <source src="Group007FinalVideo.mp4" type=video/mp4>
-          </video> -->
+          <div id="justInCase">If the video doesn't play, follow <a href="https://drive.google.com/file/d/1vF7C1ZjbUd8KNMDUHan9YZMVy4rbcmnQ/view?usp=sharing" target="_blank">THIS LINK</a> to view it in our drive folder for sprint 3.</div>
           <iframe src="https://drive.google.com/file/d/1vF7C1ZjbUd8KNMDUHan9YZMVy4rbcmnQ/preview" id="processVideo"></iframe>
         </div>
       </div>
