Added test cases

--- a/index.html
+++ b/index.html
@@ -166,6 +166,24 @@
               <li>
                 The register form should require all fields except for the instructor email.
               </li>
+              <li>
+                Blocks can be dragged between lines
+              </li>
+              <li>
+                Blocks can be reordered within lines
+              </li>
+              <li>
+                A line of blocks can be cleared by clicking the trash icon. 
+              </li>
+              <li>
+                When a correct answer is entered the user is taken back to the dashboard
+              </li>
+              <li>
+                Can register a new user by calling the register.php URI via postman. 
+              </li>
+              <li>
+                The navbar should change appearances to accomodate various screen sizes. 
+              </li>
             </ul>
           </div>
         </div>
@@ -173,7 +191,7 @@
 
       <div class="layoutTableRow">
         <div class="layoutTableCell wideCellPadding centerIt">
-          <div id="justInCase">If the video doesn't play, follow <a href="https://drive.google.com/file/d/1vF7C1ZjbUd8KNMDUHan9YZMVy4rbcmnQ/view?usp=sharing" target="_blank">THIS LINK</a> to view it in our drive folder for sprint 3.</div>
+          <div id="justInCase">If the video doesn't play, follow <a href="https://drive.google.com/file/d/1vF7C1ZjbUd8KNMDUHan9YZMVy4rbcmnQ/view?usp=sharing" target="_blank">THIS LINK</a> | <a href="https://drive.google.com/file/d/1vLSDvaxPJFnGgf8OrCk59eVeYbqKI8ik/view?usp=sharing" target="_blank">(THIS ONE FOR NASH)</a>to view it in our drive folder for sprint 3.</div>
           <iframe src="https://drive.google.com/file/d/1vF7C1ZjbUd8KNMDUHan9YZMVy4rbcmnQ/preview" id="processVideo"></iframe>
         </div>
       </div>
